# Dataforge

./: .gitignore  .pre-commit-config.yaml  README.md  TESTING.md  pyproject.toml  setup.py
dataforge/: __init__.py
dataforge/advisor/: __init__.py  engine_recommender.py  hardware_detector.py  size_analyzer.py
dataforge/api/: __init__.py  native.py  unified.py
dataforge/benchmarks/: __init__.py  profiler.py  reporter.py
dataforge/core/: __init__.py  base.py  config.py  exceptions.py
dataforge/databricks/: __init__.py  context.py  delta.py  optimizations.py  photon.py  unity_catalog.py
dataforge/engines/: __init__.py  pandas_engine.py  polars_engine.py  rapids_engine.py  spark_engine.py
dataforge/ml/: __init__.py  features.py  mlflow_utils.py  pipeline.py
dataforge/quality/: __init__.py  checks.py  profiler.py  validators.py
dataforge/storage/: __init__.py  format_advisor.py  s3_optimizer.py  storage_analyzer.py
dataforge/streaming/: __init__.py  processors.py  sinks.py  sources.py
dataforge/transformations/: __init__.py  aggregations.py  common.py  joins.py
dataforge/utils/: __init__.py  converters.py  logging.py
examples/: 01_basic_usage.py  02_engine_comparison.py  03_data_quality.py  04_ml_pipeline.py  05_streaming.py
scala/: build.sbt
scala/src/main/scala/com/dataforge/: DeltaLakeUtils.scala  S3Optimizer.scala  SparkOptimizations.scala  StreamingUtils.scala  UnityCatalogUtils.scala
tests/: __init__.py  test_core.py  test_imports.py  test_s3_integration.py
