[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforge"
version = "1.0.0"
description = "Intelligent Data Processing Framework for Pandas, Spark, and RAPIDS"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "DataForge Team", email = "team@dataforge.dev"}
]
maintainers = [
    {name = "DataForge Team", email = "team@dataforge.dev"}
]
keywords = [
    "data-processing",
    "pandas",
    "spark",
    "rapids",
    "databricks",
    "delta-lake",
    "unity-catalog",
    "ml-pipeline",
    "data-quality",
    "streaming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.3.0",
    "delta-spark>=2.0.0",
]
rapids = [
    "cudf>=23.0.0",
    "cuml>=23.0.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "mlflow>=2.0.0",
]
quality = [
    "great-expectations>=0.15.0",
]
all = [
    "dataforge[spark,ml,quality]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "boto3>=1.28.0",
    "moto[s3]>=4.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dataforge/dataforge"
Documentation = "https://dataforge.readthedocs.io"
Repository = "https://github.com/dataforge/dataforge"
Issues = "https://github.com/dataforge/dataforge/issues"
Changelog = "https://github.com/dataforge/dataforge/blob/main/CHANGELOG.md"

[project.scripts]
dataforge = "dataforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataforge*"]

[tool.setuptools.package-data]
dataforge = ["py.typed"]

# ============================================================================
# Type Checking Configuration (ty / mypy)
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "delta.*",
    "cudf.*",
    "cuml.*",
    "mlflow.*",
    "great_expectations.*",
]
ignore_missing_imports = true

# ============================================================================
# Testing Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--doctest-modules",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "spark: marks tests that require Spark",
    "rapids: marks tests that require RAPIDS/GPU",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["dataforge"]
branch = true
parallel = true
omit = [
    "tests/*",
    "examples/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
precision = 2

# ============================================================================
# Code Formatting Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".venv", "build", "dist"]
known_first_party = ["dataforge"]
known_third_party = ["pandas", "numpy", "pyspark", "cudf", "mlflow"]

# ============================================================================
# Linting Configuration (Ruff)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"examples/*" = ["T201"]

# ============================================================================
# ty Configuration (astral-sh/ty)
# ============================================================================

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Note: ty is a type checker focused on detecting type errors.
# External libraries (pyspark, cudf, etc.) may not have complete type stubs.
